objects/Competitor__c.object
<CustomObject>
    <description>This object holds competitor infos for opportunities</description>
    <fields>
        <fullName>ABB_Ranking__c</fullName>
        <description>created as part of R5</description>
        <label>ABB Ranking</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bad_Track_Record__c</fullName>
        <label>Bad Track Record</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <description>Lookup to a competitor account</description>
        <inlineHelpText>Select the competitor account</inlineHelpText>
        <label>Competitor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select the Competitor Account</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>ABB ICV</value>
            </filterItems>
            <infoMessage>Please select the Competitor Account</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Links</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship__c</fullName>
        <label>Customer Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>created as part of R5</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Sale_Price__c</fullName>
        <formula>Opportunity__r.Opportunity_Value__c + ((VALUE(TEXT(Percentage__c)) / 100) * Opportunity__r.Opportunity_Value__c)</formula>
        <inlineHelpText>Estimated Sales Price calculated with the input in the Percentage field above.</inlineHelpText>
        <label>Estimated Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installed_Base__c</fullName>
        <label>Installed Base</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Links the competitor junction record to the opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Packaging_Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Packaging/solution (one-stop-shop)</inlineHelpText>
        <label>Packaging / Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <description>Created as part of R5-2281</description>
        <inlineHelpText>Select the competitor&apos;s estimated range difference against the Opportunity Value. E.g. select &quot;-20% - -15%&quot; if competitor price was lower to ABB price in range of -20% - -15% ).</inlineHelpText>
        <label>Percentage</label>
        <picklist>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Leadership__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Price leadership (cost reduction)</inlineHelpText>
        <label>Price Leadership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Strategy__c</fullName>
        <label>Pricing Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplementary_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Supplementary services (benefit)</inlineHelpText>
        <label>Supplementary Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Deviation__c</fullName>
        <label>Technical Deviation</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology_Leadership__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Technology leadership (image)</inlineHelpText>
        <label>Technology Leadership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Winning_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of R5-2347 to mark the winning competitor.</description>
        <label>Winning Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Competitors__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Competitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Competitor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Competitor__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CN-{0}</displayFormat>
        <label>Competitor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Competitor_Channel_Class_check</fullName>
        <active>false</active>
        <description>Craeted as part of R5-2347.</description>
        <errorConditionFormula>OR(  ISPICKVAL(Competitor__r.Channel_Class__c, &apos;ABBINT&apos;), ISPICKVAL(Competitor__r.Channel_Class__c, &apos;DEU&apos;))</errorConditionFormula>
        <errorMessage>ABB Internal accounts and Direct End User accounts for the opportunity cannot be added as competitors.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Competitor_No_Bulk_Accounts</fullName>
        <active>true</active>
        <description>Account End User from related Opportunity and Competitor Account cannot be Bulk Accounts.</description>
        <errorConditionFormula>AND(
    NOT($User.AccountMerge_Override__c),
    NOT($Setup.Validation_Override__c.Exclude__c),    
    OR(
        CONTAINS(LOWER(Opportunity__r.Account.Name), &apos;bulk business&apos;),        
        CONTAINS(LOWER(Competitor__r.Name), &apos;bulk business&apos;)
    )
)</errorConditionFormula>
        <errorMessage>Account End User from related Opportunity and Competitor Account cannot be Bulk Accounts.</errorMessage>
    </validationRules>
</CustomObject>